--- a/static/css/index.css
+++ b/static/css/index.css
@@ -89,23 +89,29 @@ body {
   /*color: #4286f4;*/
 }
 
-.publication-video {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-
-    overflow: hidden;
-    border-radius: 10px !important;
+.publication-banner video {
+  position: relative;
+  object-fit: contain; /* 视频自适应 */
+  width: 80%; /* 设置宽度为80% */
+  max-width: 640px; /* 限制最大宽度 */
+  height: auto; /* 高度自动适应 */
+  display: block; /* 视频设置为块级元素 */
+  margin: 0 auto; /* 居中显示 */
 }
 
-.publication-video iframe {
+.publication-video {
+    border-radius: 10px; /* 视频圆角 */
+    margin: 20px auto; /* 上下间距20px，并居中 */
+}
+
+
+/* .publication-video iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 50%;
     height: 50%;
-}
+} */
 
 .publication-body img {
 }
